fix bug with variation overflow text issue.

--- a/variations/uncc/styles/full-site.css
+++ b/variations/uncc/styles/full-site.css
@@ -204,6 +204,7 @@
 		border:none;
 		white-space: nowrap;
 		text-overflow: ellipsis;
+		overflow:hidden;
 	}
 	
 	#header-menu ul ul > li > a {
